syntax = "proto3";

option java_multiple_files = true;
option java_package="com.kptl.proto.employee";

package employee;

//请求
message OperateRequest {
  int32 id = 1;
  int32 jobId = 2;
}

message FindRecordsReq {
  int32 id = 1;
}

message SelfInformation {
  SimpleInformation simpleInfo = 1;
  int32 isMarry = 2;
  int32 education = 3;
  int32 jobStatus = 4;
}

message SimpleInformation {
  int32 id = 1;
  string realName = 2;
  int32 sex = 3;
  int32 workYear = 4;
  string expectedLocation = 5;
  string industry = 6;
  JobType jobType = 7;
}

enum JobType {
  LONG = 0;       //长工
  SHORT = 1;      //短工
  PARTTIMEJOB = 2;//兼职
}

message FindEmployeeInfoReq {
  int32 id = 1;
}

message SplitPage {
  int32 index = 1;
  int32 size = 2;
}

message FindEmployeeSimpleResponse {
  ResponseHeader header = 1;
  repeated SimpleInformation employees = 2;
}

message FindEmployeeResponse {
  ResponseHeader header = 1;
  SelfInformation selfInfo = 2;
}

message OperateResponse {
  ResponseHeader header = 1;
  repeated int32 jobIds = 2;
}

message ResponseHeader {
  ResponseStatus status = 1;
  string message = 2;
}
//错误码
enum ResponseStatus {
  OK = 0;
  InternalErr = 1;
}

//定义员工服务
service Employee {
  rpc deliver (OperateRequest) returns (OperateResponse) {};
  rpc browses (OperateRequest) returns (OperateResponse) {};
  rpc deliverRecords (FindRecordsReq) returns (OperateResponse) {};
  rpc completeSelfInformation (SelfInformation) returns (ResponseHeader) {};
  rpc findEmployeeInformation (FindEmployeeInfoReq) returns (FindEmployeeResponse) {};
  rpc findEmployeeSimpleInformation (SplitPage) returns (FindEmployeeSimpleResponse) {};
}

